pie chart references

--- a/assignment03-pie.ipynb
+++ b/assignment03-pie.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Pie Chart\n",
     "---\n",
-    "This notebook contains a pie chart of 1000 people's email domain"
+    "This notebook contains 1000 people's email domains, separated into three categories - @example.com, @example.net and @example.org. A pie chart is created from these categories with the percentage or occurance for each domain."
    ]
   },
   {
@@ -844,6 +844,17 @@
     "plt.title('Percentages of the Three different Email Domain Types')\n",
     "plt.legend()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# References\n",
+    "---\n",
+    "1. Regex: https://ravi-chan.medium.com/beginners-guide-to-regex-in-pandas-308b79e477e6\n",
+    "2. Matplotlib Pie Chart: https://matplotlib.org/stable/gallery/pie_and_polar_charts/pie_features.html#sphx-glr-gallery-pie-and-polar-charts-pie-features-py\n",
+    "3. W3schools Pie Chart: https://www.w3schools.com/python/matplotlib_pie_charts.asp"
    ]
   }
  ],
