--- a/assignment03-pie.ipynb
+++ b/assignment03-pie.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
        "[1000 rows x 9 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +474,7 @@
        "[1001 rows x 8 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,6 +483,274 @@
     "# Remove one of the index columns\n",
     "df = pd.read_csv(\"people-1000.csv\", header=None, index_col=0)\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>domain</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Index</th>\n",
+       "      <td>User Id</td>\n",
+       "      <td>First Name</td>\n",
+       "      <td>Last Name</td>\n",
+       "      <td>Sex</td>\n",
+       "      <td>Email</td>\n",
+       "      <td>Phone</td>\n",
+       "      <td>Date of birth</td>\n",
+       "      <td>Job Title</td>\n",
+       "      <td>Email</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>8717bbf45cCDbEe</td>\n",
+       "      <td>Shelia</td>\n",
+       "      <td>Mahoney</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>pwarner@example.org</td>\n",
+       "      <td>857.139.8239</td>\n",
+       "      <td>2014-01-27</td>\n",
+       "      <td>Probation officer</td>\n",
+       "      <td>example.org</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3d5AD30A4cD38ed</td>\n",
+       "      <td>Jo</td>\n",
+       "      <td>Rivers</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>fergusonkatherine@example.net</td>\n",
+       "      <td>+1-950-759-8687</td>\n",
+       "      <td>1931-07-26</td>\n",
+       "      <td>Dancer</td>\n",
+       "      <td>example.net</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>810Ce0F276Badec</td>\n",
+       "      <td>Sheryl</td>\n",
+       "      <td>Lowery</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>fhoward@example.org</td>\n",
+       "      <td>(599)782-0605</td>\n",
+       "      <td>2013-11-25</td>\n",
+       "      <td>Copy</td>\n",
+       "      <td>example.org</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>BF2a889C00f0cE1</td>\n",
+       "      <td>Whitney</td>\n",
+       "      <td>Hooper</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>zjohnston@example.com</td>\n",
+       "      <td>+1-939-130-6258</td>\n",
+       "      <td>2012-11-17</td>\n",
+       "      <td>Counselling psychologist</td>\n",
+       "      <td>example.com</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>996</th>\n",
+       "      <td>fedF4c7Fd9e7cFa</td>\n",
+       "      <td>Kurt</td>\n",
+       "      <td>Bryant</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>lyonsdaisy@example.net</td>\n",
+       "      <td>021.775.2933</td>\n",
+       "      <td>1959-01-05</td>\n",
+       "      <td>Personnel officer</td>\n",
+       "      <td>example.net</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>997</th>\n",
+       "      <td>ECddaFEDdEc4FAB</td>\n",
+       "      <td>Donna</td>\n",
+       "      <td>Barry</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>dariusbryan@example.com</td>\n",
+       "      <td>001-149-710-7799x721</td>\n",
+       "      <td>2001-10-06</td>\n",
+       "      <td>Education administrator</td>\n",
+       "      <td>example.com</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>998</th>\n",
+       "      <td>2adde51d8B8979E</td>\n",
+       "      <td>Cathy</td>\n",
+       "      <td>Mckinney</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>georgechan@example.org</td>\n",
+       "      <td>+1-750-774-4128x33265</td>\n",
+       "      <td>1918-05-13</td>\n",
+       "      <td>Commercial/residential surveyor</td>\n",
+       "      <td>example.org</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>999</th>\n",
+       "      <td>Fb2FE369D1E171A</td>\n",
+       "      <td>Jermaine</td>\n",
+       "      <td>Phelps</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>wanda04@example.net</td>\n",
+       "      <td>(915)292-2254</td>\n",
+       "      <td>1971-08-31</td>\n",
+       "      <td>Ambulance person</td>\n",
+       "      <td>example.net</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1000</th>\n",
+       "      <td>8b756f6231DDC6e</td>\n",
+       "      <td>Lee</td>\n",
+       "      <td>Tran</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>deannablack@example.org</td>\n",
+       "      <td>079.752.5424x67259</td>\n",
+       "      <td>1947-01-24</td>\n",
+       "      <td>Nurse, learning disability</td>\n",
+       "      <td>example.org</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1001 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     1           2          3       4  \\\n",
+       "0                                                       \n",
+       "Index          User Id  First Name  Last Name     Sex   \n",
+       "1      8717bbf45cCDbEe      Shelia    Mahoney    Male   \n",
+       "2      3d5AD30A4cD38ed          Jo     Rivers  Female   \n",
+       "3      810Ce0F276Badec      Sheryl     Lowery  Female   \n",
+       "4      BF2a889C00f0cE1     Whitney     Hooper    Male   \n",
+       "...                ...         ...        ...     ...   \n",
+       "996    fedF4c7Fd9e7cFa        Kurt     Bryant  Female   \n",
+       "997    ECddaFEDdEc4FAB       Donna      Barry  Female   \n",
+       "998    2adde51d8B8979E       Cathy   Mckinney  Female   \n",
+       "999    Fb2FE369D1E171A    Jermaine     Phelps    Male   \n",
+       "1000   8b756f6231DDC6e         Lee       Tran  Female   \n",
+       "\n",
+       "                                   5                      6              7  \\\n",
+       "0                                                                            \n",
+       "Index                          Email                  Phone  Date of birth   \n",
+       "1                pwarner@example.org           857.139.8239     2014-01-27   \n",
+       "2      fergusonkatherine@example.net        +1-950-759-8687     1931-07-26   \n",
+       "3                fhoward@example.org          (599)782-0605     2013-11-25   \n",
+       "4              zjohnston@example.com        +1-939-130-6258     2012-11-17   \n",
+       "...                              ...                    ...            ...   \n",
+       "996           lyonsdaisy@example.net           021.775.2933     1959-01-05   \n",
+       "997          dariusbryan@example.com   001-149-710-7799x721     2001-10-06   \n",
+       "998           georgechan@example.org  +1-750-774-4128x33265     1918-05-13   \n",
+       "999              wanda04@example.net          (915)292-2254     1971-08-31   \n",
+       "1000         deannablack@example.org     079.752.5424x67259     1947-01-24   \n",
+       "\n",
+       "                                     8       domain  \n",
+       "0                                                    \n",
+       "Index                        Job Title        Email  \n",
+       "1                    Probation officer  example.org  \n",
+       "2                               Dancer  example.net  \n",
+       "3                                 Copy  example.org  \n",
+       "4             Counselling psychologist  example.com  \n",
+       "...                                ...          ...  \n",
+       "996                  Personnel officer  example.net  \n",
+       "997            Education administrator  example.com  \n",
+       "998    Commercial/residential surveyor  example.org  \n",
+       "999                   Ambulance person  example.net  \n",
+       "1000        Nurse, learning disability  example.org  \n",
+       "\n",
+       "[1001 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pattern = r\".*@\"\n",
+    "df[\"domain\"] = df[5].str.replace(pattern, '', regex = True)\n",
+    "\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# creating dataframe\n",
+    "dataFrame = pd.DataFrame({\n",
+    "   \"Email_domain\": ['example.com', 'example.net', 'example.org'], \"Number_of_domains\": [339, 320, 341]\n",
+    "})\n",
+    "colors = ['pink', 'steelblue', 'red']\n",
+    "explode = [0, 0, 0.1]\n",
+    "\n",
+    "plt.pie(df[\"domain\"], labels = dataFrame[\"Email_domain\"], autopct='%1.1f%%', startangle=90, explode = explode, shadow = True, colors = colors)\n",
+    "\n",
+    "plt.title('Percentages of the Three different Email Domain Types')\n",
+    "plt.legend()\n",
+    "plt.show()"
    ]
   },
   {
