--- a/assignment_5_risk.ipynb
+++ b/assignment_5_risk.ipynb
@@ -37,13 +37,174 @@
     "- If die 1 of attacker is greater than die 1 of defender, defender loses 1 army, if lower then attacker loses an army\n",
     "- If die 2 of attacker is greater than die 2 of defender, defender loses another army, if lower then attacker loses another army\n",
     "- If die 1 of attacker is equal to die 1 of defender, attacker loses 1 army\n",
-    "- If die 2 of attacker is equal to die 2 of defender, attacker loses another army"
+    "- If die 2 of attacker is equal to die 2 of defender, attacker loses another army\n",
+    "- There are 216 possible combinations when rolling 3 dice (6^3), and 36 possible combonations when rolling 2 dice (6^2)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3, 4, 5, 6])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n_sides = 6\n",
+    "\n",
+    "die = np.array([i for i in range(1, n_sides+1)])\n",
+    "\n",
+    "die"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import Counter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({1: 1, 2: 1, 3: 1, 4: 1, 5: 1, 6: 1})"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d6 = Counter(range(1,7))\n",
+    "\n",
+    "d6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def attackers(attack):\n",
+    "    #Number of attackers in an attack\n",
+    "    return attack[0]\n",
+    "\n",
+    "def defenders(attack):\n",
+    "    #Number of defenders in an attack\n",
+    "    return attack[1]\n",
+    "\n",
+    "def total_armies(attack):\n",
+    "    #Total number of armies on both sides involved in an attck\n",
+    "    return attackers(attack)+defenders(attack)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_roll_probs(attacks):\n",
+    "    #Probability distribution of rolls in attacks, by total number of dice rolled\n",
+    "    return {total_armies(attack): die.repeated(total_armies(attack), product=True) for attack in attacks}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def attacker_roll(attack, roll):\n",
+    "    #Dice rolled by attacker, sorted highest to lowest.\n",
+    "    return sorted(roll[:attackers(attack)], reverse=True)\n",
+    "\n",
+    "def defender_roll(attack, roll):\n",
+    "    #Dice rolled by defender, sorted highest to lowest.\n",
+    "    return sorted(roll[-defenders(attack):], reverse=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'module' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[19], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m attack \u001b[38;5;241m=\u001b[39m (\u001b[38;5;241m3\u001b[39m,\u001b[38;5;241m2\u001b[39m)\n\u001b[1;32m----> 2\u001b[0m roll \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mrandom[total_armies(attack)]\u001b[38;5;241m.\u001b[39mchoice()\n\u001b[0;32m      4\u001b[0m roll\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'module' object is not subscriptable"
+     ]
+    }
+   ],
+   "source": [
+    "attack = (3,2)\n",
+    "roll = np.random[total_armies(attack)].choice()\n",
+    "\n",
+    "roll"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## References\n",
+    "---\n",
+    "1. How to play Risk: https://www.hasbro.com/common/instruct/risk.pdf\n",
+    "2. Battle Outcome Analysis: https://www.c4i.gr/xgeorgio/docs/RISK-board-game%20_rev-3.pdf\n",
+    "3. Battle simulation code: https://practicallypredictable.com/2017/12/18/analyzing-board-game-risk/"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
