--- a/assignment_5_risk.ipynb
+++ b/assignment_5_risk.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
        "array([1, 2, 3, 4, 5, 6])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,12 +82,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from collections import Counter"
+    "from collections import Counter\n",
+    "from collections import namedtuple"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +97,7 @@
        "Counter({1: 1, 2: 1, 3: 1, 4: 1, 5: 1, 6: 1})"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +110,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1, 1), (1, 2), (2, 1), (2, 2), (3, 1), (3, 2)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "options = [(x, y) for x in range(1, 4) for y in range(1, 3)]\n",
+    "\n",
+    "print(options)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,13 +148,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_roll_probs(attacks):\n",
     "    #Probability distribution of rolls in attacks, by total number of dice rolled\n",
-    "    return {total_armies(attack): die.repeated(total_armies(attack), product=True) for attack in attacks}"
+    "    return {total_armies(attack): (total_armies(attack), product=True) for attack in attacks}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'numpy.ndarray' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[18], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m roll_probs \u001b[38;5;241m=\u001b[39m get_roll_probs(options)\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mlen\u001b[39m(roll_probs)\n",
+      "Cell \u001b[1;32mIn[15], line 3\u001b[0m, in \u001b[0;36mget_roll_probs\u001b[1;34m(attacks)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mget_roll_probs\u001b[39m(attacks):\n\u001b[0;32m      2\u001b[0m     \u001b[38;5;66;03m#Probability distribution of rolls in attacks, by total number of dice rolled\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m {total_armies(attack): die(total_armies(attack), product\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m) \u001b[38;5;28;01mfor\u001b[39;00m attack \u001b[38;5;129;01min\u001b[39;00m attacks}\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'numpy.ndarray' object is not callable"
+     ]
+    }
+   ],
+   "source": [
+    "roll_probs = get_roll_probs(options)\n",
+    "len(roll_probs)"
    ]
   },
   {
@@ -174,6 +217,72 @@
     "roll = np.random[total_armies(attack)].choice()\n",
     "\n",
     "roll"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Attack(n_attackers=1, n_defenders=1), Attack(n_attackers=1, n_defenders=2), Attack(n_attackers=2, n_defenders=1), Attack(n_attackers=2, n_defenders=2), Attack(n_attackers=3, n_defenders=1), Attack(n_attackers=3, n_defenders=2)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from typing import NamedTuple\n",
+    "\n",
+    "class Attack(NamedTuple):\n",
+    "    n_attackers: int\n",
+    "    n_defenders: int\n",
+    "\n",
+    "options = [\n",
+    "    Attack(x, y) for x in range(1, 4) for y in range(1, 3)\n",
+    "]\n",
+    "\n",
+    "print(options)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Attack(n_attackers=3, n_defenders=2)\n",
+      "[6 3 2]\n",
+      "[3 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "class Attack(NamedTuple):\n",
+    "    n_attackers: int\n",
+    "    n_defenders: int\n",
+    "\n",
+    "options = [\n",
+    "    Attack(x, y) for x in range (3, 4) for y in range (2, 3)\n",
+    "]\n",
+    "\n",
+    "for option in options:\n",
+    "    print(option)\n",
+    "\n",
+    "    attack = np.random.randint(1, 7, option.n_attackers)\n",
+    "    attack.sort()\n",
+    "    attack = np.flip(attack)\n",
+    "    print(attack)\n",
+    "\n",
+    "    defence = np.random.randint(1, 7, option.n_defenders)\n",
+    "    defence.sort()\n",
+    "    defence = np.flip(defence)\n",
+    "    print(defence)"
    ]
   },
   {
